# tyrn-switch

./: .gitignore  README.md  pyproject.toml  setup.cfg
tests/: test_tyrn_switch.py
tyrn_switch/: tys.py
