[tool.poetry]
name = "tyrn-switch"
version = "0.1.0"
description = ""
authors = ["Tyrn <a@b.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
tys = "tyrn_switch.tys:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
